--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+$primary-color: #038491;
+$secondary-color: #EE6C4D;
+/* $third-color: #;
+$fourth-color: ;
+$fifth-color: ;
+$sixth-color: ; */
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
