feature to see all rides

--- a/src/app/shared/components/see-rides/see-rides.component.html
+++ b/src/app/shared/components/see-rides/see-rides.component.html
@@ -3,7 +3,7 @@
 <div class="rides-list">
     <div class="container" *ngFor="let ride of rides">
         <h3>{{ride.itinary}}</h3>
-        <h4>Départ le {{ride.departureTime.substring(0, 10)}} à {{ride.departureTime.substring(11, 16)}}</h4>
+        <h4>Départ le {{ride.date.substring(0, 10)}} à {{ride.date.substring(11, 16)}}</h4>
         <p> Nombre de place(s) disponible(s) : {{ride.places}}</p>
 
 
