--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<router-outlet></router-outlet>
+<div>
+  <app-navbar (logout)="logout()" [user]="user$ | async"></app-navbar>
+  <router-outlet></router-outlet>
+</div>
+
 
