add css to navbar and login page

--- a/src/app/pages/auth/sign-up/sign-up.component.scss
+++ b/src/app/pages/auth/sign-up/sign-up.component.scss
@@ -26,7 +26,7 @@
             text-align: center;
             width: 20em;
             height: 3em;
-            font-size: 1em;;
+            font-size: 1em;
         }
 
         button {
