--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-$primary-color: #a64c89;
+$primary-color: #7191a6;
 $secondary-color: #EE6C4D;
 /* $third-color: #;
 $fourth-color: ;
