add html and style to home page

--- a/src/app/pages/auth/sign-in/sign-in.component.html
+++ b/src/app/pages/auth/sign-in/sign-in.component.html
@@ -11,6 +11,6 @@
       passe</p>
     </div>
     <p class="error" *ngIf="error">{{error}}</p>
-    <button class="btn-secondary" [disabled]="!form.valid">Se connecter</button>
+    <button class="btn btn-secondary" [disabled]="!form.valid">Se connecter</button>
   </form>
 </div>
