--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,36 @@
-<p>home works!</p>
+<div class="container">
+  <section class="container__hero">
+    <form>
+      <h2>Rechercher un trajet</h2>
+      <input type="text" placeholder="Ville" name="city">
+      <input type="datetime" placeholder="Date" name="date">
+      <div class="container__hero__radio">
+        <div>
+          <label for="aller">Aller</label>
+          <input type="radio" name="direction">
+        </div>
+        <div>
+          <label for="retour">Retour</label>
+          <input type="radio" name="direction">
+        </div>
+      </div>
+      <button class="btn btn-primary">Rechercher</button>
+    </form>
+  </section>
+  <section class="container__road">
+    <img src="../../../assets/img/road-v2.svg" alt="Image de présentation du site">
+  </section>
+  <section class="container__enterprise">
+    <h2>Le mot de l'entreprise</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam feugiat augue non faucibus hendrerit. 
+      Nullam et elementum est. Pellentesque a consectetur sem. Donec mattis ex non risus tempor ornare. 
+      Praesent ut ex ante. Sed condimentum elit ac auctor maximus. Proin eu eros ipsum. Mauris ut augue at 
+      mauris lobortis pharetra vitae ac enim. In id nulla quam. Donec vestibulum velit quis lacus porttitor posuere.
+      Praesent justo nisl, egestas nec justo.
+    </p>
+  </section>
+  <section class="container__rides">
+    <h2>Les derniers trajets</h2>
+  </section>
+</div>
