--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 $primary-color: #038491;
 $secondary-color: #EE6C4D;
 $third-color: #98C1D9;
+$four-color: #3D5A80;
 $dark-color: #293241;
 $light-color: #E0FBFC;
 
@@ -25,15 +26,28 @@ a {
     text-decoration: none;
 }
 
-.btn-secondary {
-    background-color: $secondary-color;
+.btn {
     border: none;
     border-radius: 1.5em;
     font-size: 1.2em;
-    color: white;
     padding: 1em 1.8em;
-    transition: 0.8s;
     cursor: pointer;
+}
+
+.btn-primary {
+    background-color: $four-color;
+    color: white;
+    transition: 0.2s;
+
+    &:hover {
+        background-color: $primary-color;
+    }
+}
+
+.btn-secondary {
+    background-color: $secondary-color;
+    color: white;
+    transition: 0.8s;
 
     &:hover {
         background-color: $primary-color;
