--- a/src/app/pages/auth/sign-in/sign-in.component.html
+++ b/src/app/pages/auth/sign-in/sign-in.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <form [formGroup]="form" (submit)="submit()" class="container__form">
-    <img src="../../../../assets/img/connexion.svg" alt="logo">
+    <img src="../../../../assets/img/connexion.png" alt="logo">
     <div>
       <input type="email" placeholder="Email" formControlName="email">
       <p *ngIf="form.get('email')?.errors?.['required']&&form.get('email')?.touched">Veuillez renseigner un email</p>
