add css to home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+
 <div class="container">
   <section class="container__hero">
     <form>
@@ -18,7 +19,7 @@
     </form>
   </section>
   <section class="container__road">
-    <img src="../../../assets/img/road-v2.svg" alt="Image de présentation du site">
+    <img src="../../../assets/img/road.png" alt="Image de présentation du site">
   </section>
   <section class="container__enterprise">
     <h2>Le mot de l'entreprise</h2>
@@ -34,3 +35,8 @@
     <h2>Les derniers trajets</h2>
   </section>
 </div>
+
+<div class="container-blue">
+  
+</div>
+
