--- a/src/app/pages/see-a-ride/see-a-ride.component.html
+++ b/src/app/pages/see-a-ride/see-a-ride.component.html
@@ -8,7 +8,7 @@
   <p>Place(s) restante(s) : {{ride.places}}</p>
   <div>
     <button>Retour</button>
-    <button>Réserver</button>
+    <button (click)="reservation()">Réserver</button>
   </div>
   </div>
 
