--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,8 +48,10 @@ a {
     background-color: $secondary-color;
     color: white;
     transition: 0.8s;
+    border: 2px solid transparent;
 
     &:hover {
         background-color: $primary-color;
+        border: 2px solid $secondary-color;
     }
 }
