--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -103,12 +103,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: white;
+    
 
     h2 {
-      color: white;
       font-size: 2.5em;
       font-weight: bold;
       margin-bottom: 2em;
+    }
+
+    div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-left: 5em;
     }
   }
 }
