--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -37,5 +37,6 @@
       <app-card-light [ride]="ride" *ngFor="let ride of rides"></app-card-light>
     </div>
   </section>
+  <app-footer></app-footer>
 </div>
 
