--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -104,6 +104,7 @@
     flex-direction: column;
     align-items: center;
     color: white;
+    min-height: 400px;
     
 
     h2 {
@@ -115,7 +116,7 @@
     div {
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;
       padding-left: 5em;
     }
   }
