--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -11,5 +11,5 @@
       <a href="">Mes futurs trajets</a>
     </div>
   </section>
-  <p class="company">@Orange pixel</p>
+  <p class="company">©Orange pixel</p>
 </footer>
