--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,18 @@
 
 <div class="container">
   <section class="container__hero">
-    <form>
+    <form [formGroup]="form" (submit)="submit()">
       <h2>Rechercher un trajet</h2>
-      <input type="text" placeholder="Ville" name="city">
-      <input type="datetime" placeholder="Date" name="date">
+      <input type="text" placeholder="Ville" formControlName="city">
+      <input type="date" placeholder="Date" formControlName="date">
       <div class="container__hero__radio">
         <div>
           <label for="aller">Aller</label>
-          <input type="radio" name="direction">
+          <input type="radio" formControlName="home_to_office" value="true">
         </div>
         <div>
           <label for="retour">Retour</label>
-          <input type="radio" name="direction">
+          <input type="radio" formControlName="home_to_office" value="false">
         </div>
       </div>
       <button class="btn btn-primary">Rechercher</button>
