--- a/src/app/shared/components/card-light/card-light.component.html
+++ b/src/app/shared/components/card-light/card-light.component.html
@@ -1,11 +1,13 @@
-<article>
-  <p>Mardi 23 mai</p>
-  <div *ngIf="ride.home_to_office">
-    <p>{{ride.city}}</p>
-    <p>Entreprise</p>
-  </div>
-  <div *ngIf="!ride.home_to_office">
-    <p>Entreprise</p>
-    <p>{{ride.city}}</p>
-  </div>
-</article>
+<a href="">
+  <article>
+    <p>Mardi 23 mai</p>
+    <div *ngIf="ride.home_to_office">
+      <p>{{ride.city}}</p>
+      <p>Entreprise</p>
+    </div>
+    <div *ngIf="!ride.home_to_office">
+      <p>Entreprise</p>
+      <p>{{ride.city}}</p>
+    </div>
+  </article>
+</a>
