--- a/src/app/shared/components/card-light/card-light.component.scss
+++ b/src/app/shared/components/card-light/card-light.component.scss
@@ -8,6 +8,7 @@ article {
   border: solid 8px $primary-color;
   margin-left: -5em;
   transition: 0.5s;
+  color: white;
 
   p {
     font-size: 1.8em;
