--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -33,8 +33,9 @@
   </section>
   <section class="container__rides">
     <h2>Les derniers trajets</h2>
-    <div>
+    <div class="container__rides__cards">
       <app-card-light [ride]="ride" *ngFor="let ride of rides"></app-card-light>
+      <a href="" class="container__rides__link">Tout voir</a>
     </div>
   </section>
   <app-footer></app-footer>
