add search function to homepage and rides

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -35,7 +35,7 @@
     <h2>Les derniers trajets</h2>
     <div class="container__rides__cards">
       <app-card-light [ride]="ride" *ngFor="let ride of rides"></app-card-light>
-      <a href="" class="container__rides__link">Tout voir</a>
+      <a (click)="ridesReset()" class="container__rides__link">Tout voir</a>
     </div>
   </section>
   <app-footer></app-footer>
