--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -115,6 +115,7 @@
       color: white;
       display: inline-block;
       position: relative;
+      cursor: pointer;
 
       &:after {
         content: '';
