change footer if user connected or not

--- a/src/app/shared/components/card-light/card-light.component.html
+++ b/src/app/shared/components/card-light/card-light.component.html
@@ -1,4 +1,4 @@
-<a href="">
+<a [routerLink]="['/trajet', ride.id_ride]">
   <article>
     <p>Mardi 23 mai</p>
     <div *ngIf="ride.home_to_office">
