--- a/src/app/pages/see-rides/see-rides.component.html
+++ b/src/app/pages/see-rides/see-rides.component.html
@@ -18,7 +18,8 @@
 </div>
 
 <div class="rides-list">
-    <p *ngIf="!rides || rides.length === 0">Aucune correspondance trouvée</p>
+    <p *ngIf="(!rides || rides.length === 0) && !loading">Aucune correspondance trouvée</p>
+    <p *ngIf="loading">Chargement...</p>
     <div class="container" *ngFor="let ride of rides">
         <h3> De {{ride.departure}} à {{ride.arrival}}</h3>
         <h4>Départ le {{ride.date.substring(0, 10)}} à {{ride.date.substring(11, 16)}}</h4>
