--- a/src/app/pages/see-a-ride/see-a-ride.component.html
+++ b/src/app/pages/see-a-ride/see-a-ride.component.html
@@ -1,26 +1,14 @@
 <div class="container">
   <div class="child">
-    <p class="title">Proposé par <span>{{ride.firstname}} Didier</span></p>
-
-<<<<<<< HEAD
+    <p class="title">Proposé par <span>{{ride.driverFirstname}} Didi</span></p>
     <p>Départ <span>{{ride.departure}}</span></p>
     <p>Arrivée <span>{{ride.arrival}}</span></p>
     <p>Heure de départ <span>{{ride.date.substring(11, 16)}}</span></p>
     <p>Place(s) restante(s) <span>{{ride.places}}</span></p>
     <div class="custom-btn">
-      <button routerLink="/trajets">Retour</button>
-      <button>Réserver</button>
+      <button class="btn btn-primary" routerLink="/trajets">Retour</button>
+      <button class="btn btn-primary">Réserver</button>
     </div>
-=======
-  <p>Départ :  {{ride.departure}}</p>
-  <p>Arrivée : {{ride.arrival}}</p>
-  <p>Heure de départ : {{ride.date.substring(11, 16)}}</p>
-  <p>Place(s) restante(s) : {{ride.places}}</p>
-  <div>
-    <button>Retour</button>
-    <button (click)="reservation()">Réserver</button>
-  </div>
->>>>>>> develop
   </div>
 
 </div>
