--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -8,6 +8,7 @@
     </div>
 
     <div *ngIf="user">
+        <a routerLink="admin">Administration</a>
         <a routerLink="trajets">Les trajets</a>
         <a routerLink="nouveau">Ajouter un trajet</a>
         <a class="logout" (click)="logout.emit(true)">Se déconnecter</a>
