--- a/src/app/pages/see-a-ride/see-a-ride.component.html
+++ b/src/app/pages/see-a-ride/see-a-ride.component.html
@@ -2,11 +2,11 @@
 
   <div class="child" *ngIf="ride">
 
-    <p class="title">Proposé par <span>{{ride.driverFirstname}}</span></p>
+    <p class="title">Proposé par <span>{{ride.driverFirstname}}</span> :</p>
     <p>Départ <span class="my-span">{{ride.departure}}</span></p>
     <p>Arrivée <span class="my-span">{{ride.arrival}}</span></p>
     <p>Heure de départ <span class="my-span">{{ride.date}}</span></p>
-    <p>Place<span *ngIf="ride.places > 1">(s)</span> restante<span *ngIf="ride.places > 1">(s)</span> <span class="my-span">{{ride.places}}</span></p>
+    <p>Place<span *ngIf="ride.places > 1">s </span> restante<span *ngIf="ride.places > 1">s</span> <span class="my-span">{{ride.places}}</span></p>
 
     <div class="custom-btn">
       <button class="btn btn-primary" routerLink="/trajets">Retour</button>
