--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -5,7 +5,7 @@ nav {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  height: 100%;
+  height: 60px;
 
   img {
     width: 15em;
@@ -24,7 +24,7 @@ nav {
       margin: 0 1.5em;
       color: white;
       font-size: 1.2em;
-      height: 100%;
+      height: 63px;
       transition: 0.2s;
       border-bottom: 4px solid transparent;
       padding: 0 1em;
