adding user account to the navbar

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -10,6 +10,7 @@
     <div *ngIf="user">
         <a routerLink="trajets">Les trajets</a>
         <a routerLink="nouveau">Ajouter un trajet</a>
+        <a routerLink="mon-compte">Mon compte</a>
         <a class="logout" (click)="logout.emit(true)">Se déconnecter</a>
     </div>
   </nav>
