--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div *ngIf="user">
-        <a routerLink="admin">Administration</a>
+        <a *ngIf="user.is_admin" routerLink="admin">Administration</a>
         <a routerLink="trajets">Les trajets</a>
         <a routerLink="nouveau">Ajouter un trajet</a>
         <a routerLink="mon-compte">Mon compte</a>
