--- a/src/app/pages/user-account/user-account.component.scss
+++ b/src/app/pages/user-account/user-account.component.scss
@@ -3,15 +3,15 @@
 .container {
 
     /* z-index: 999; */
-    background-image: url("../../../assets/img/fond-inscrire.svg");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: top;
+    background-image: url("../../../assets/img/fond-V3-02.svg");
+    background-size: cover;
     background-color: $primary-color;
     height: 95vh;
 
     display: flex;
     justify-content: center;
+
+    font-size: medium;
         
     & .left-panel {
         background-color: rgb(224, 251, 252, 0.9);
@@ -19,16 +19,49 @@
         margin: 2em;
 
         border-radius: 2em;
-        padding: 2em;
-        
+
+        display: flex;
+        flex-direction: column;
+        padding-top: 2em;
+
+        & a {
+            padding: 1em;
+            font-weight: bold;
+
+            & span {
+                margin: 1em;
+            }
+        }
+
+        & a:hover {
+            background-color: $primary-color;
+            color: white;
+            cursor: pointer;
+        }
+
+        & .profile {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            font-weight: bold;
+
+            & .picture {
+                width: 35%;
+                border-radius: 20em;
+                padding: 2em;
+                margin-left: 2em;
+            }
+
+        }
+
         & .routes {
             display: flex;
             flex-direction: column;
-        }
+            font-weight: normal;
 
-        & .picture {
-            width: 15%;
-            border-radius: 20em;
+            & a {
+                font-weight: normal;
+            }
         }
     }
 
