--- a/src/app/shared/components/user-booked-ride/user-booked-ride.component.html
+++ b/src/app/shared/components/user-booked-ride/user-booked-ride.component.html
@@ -1,10 +1,12 @@
+<h2> Mes trajets réservés </h2>
+
 <div class="rides-list">
     <div class="container" *ngFor="let ride of rides">
         <div class="up">
             <h3>{{ride.date.substring(0, 10)}}</h3>
             <div class="pilot">
                 <img src="../../../../assets/img/polite-frog.png">
-                <h3>Ayrton Senna</h3>
+                <h3>{{ride.driverFirstname}}</h3>
             </div>
         </div>
         <div class="down">
@@ -14,7 +16,7 @@
             <div class="itinary" *ngIf="!ride.home_to_office">
                 <h3>{{ride.date.substring(11, 16)}} - {{ride.city}} → ETA - IPI POE</h3>
             </div>
-            <button> Annuler </button>
+            <a> Annuler </a>
         </div>
     </div>
 </div>
