feature/admin_enabled

--- a/src/app/shared/components/list-users/list-users.component.html
+++ b/src/app/shared/components/list-users/list-users.component.html
@@ -6,6 +6,7 @@
       <td>Prénom</td>
       <td>Email</td>
       <td>Code Employé</td>
+      <td>Activé</td>
       <td>Administrateur</td>
     </tr>
     </thead>
@@ -16,12 +17,34 @@
           <td>{{user.email}}</td>
           <td>{{user.employee_code}}</td>
 
+          <td *ngIf=user.enabled>
+            <div *ngIf="user.email=='admin@ipipoe.com'; else elseBlock">Oui</div>
+            <ng-template #elseBlock>
+              <p>
+                <input (click)="updateEnabled(user.id, false, i)" type="checkbox" checked id="enabled{{user.id}}" />
+                <label for="enabled{{user.id}}">
+                  <span class="ui">
+                  </span>
+                </label>
+              </p>
+            </ng-template>
+          </td>
+          <td *ngIf=!user.enabled>
+            <p>
+              <input (click)="updateEnabled(user.id, true, i)" type="checkbox" id="enabled{{user.id}}" />
+              <label for="enabled{{user.id}}">
+                <span class="ui">
+                </span>
+              </label>
+            </p>
+          </td>
+
           <td *ngIf=user.is_admin>
             <div *ngIf="user.email=='admin@ipipoe.com'; else elseBlock">Oui</div>
             <ng-template #elseBlock>
               <p>
-                <input (click)="updateIsAdmin(user.id, false)" type="checkbox" checked id="test{{user.id}}" />
-                <label for="test{{user.id}}">
+                <input (click)="updateIsAdmin(user.id, false, i)" type="checkbox" checked id="admin{{user.id}}" />
+                <label for="admin{{user.id}}">
                   <span class="ui">
                   </span>
                 </label>
@@ -30,8 +53,8 @@
           </td>
           <td *ngIf=!user.is_admin>
             <p>
-              <input (click)="updateIsAdmin(user.id, true)" type="checkbox" id="test{{user.id}}" />
-              <label for="test{{user.id}}">
+              <input (click)="updateIsAdmin(user.id, true, i)" type="checkbox" id="admin{{user.id}}" />
+              <label for="admin{{user.id}}">
                 <span class="ui">
                 </span>
               </label>
