--- a/src/app/pages/see-rides/see-rides.component.html
+++ b/src/app/pages/see-rides/see-rides.component.html
@@ -12,18 +12,35 @@
             </div>
         </div>
         <input type="date" placeholder="Date" formControlName="date">
-        <button class="btn btn-primary">Rechercher</button>
+        <button class="btn btn-secondary">Rechercher</button>
     </form>
 
     <div class="container__rides">
-        <p *ngIf="(!rides || rides.length === 0) && !loading">Aucune correspondance trouvée</p>
-        <p *ngIf="loading">Chargement...</p>
-        <div class="container__rides__list" *ngFor="let ride of rides">
-            <h3> De {{ride.departure}} à {{ride.arrival}}</h3>
-            <h4>Départ le {{ride.date.substring(0, 10)}} à {{ride.date.substring(11, 16)}}</h4>
-            <p> Nombre de place(s) disponible(s) : {{ride.places}}</p>
-            <button [routerLink]="['/trajet',ride.id_ride]">Voir </button>
-    
+        <div class="container__rides__box">
+            <p *ngIf="(!rides || rides.length === 0) && !loading">Aucune correspondance trouvée</p>
+            <p *ngIf="loading">Chargement...</p>
+            <a [routerLink]="['/trajet',ride.id_ride]" class="container__rides__box__list" *ngFor="let ride of rides">
+                <h3>{{ride.date | date :'fullDate':'+01:00':'fr'}}</h3>
+                <div class="info">
+                    <div class="info__ride">
+                        <div class="point">
+                            <div class="point__departure">
+                                <div class="point__departure__inside"></div>
+                            </div>
+                            <div class="point__line"></div>
+                            <div class="point__arrival"></div>
+                        </div>
+                        <div class="info__ride__city">
+                            <p class="info__ride__city__departure">{{ride.date.substring(11, 16)}} - {{ride.city}}</p>
+                            <p>9h - ipipoe</p>
+                        </div>
+                        
+                    </div>
+                    <div class="info__driver">
+                        <p>{{ride.driverFirstname}} {{ride.driverLastname}}</p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </div>
