--- a/src/app/pages/see-rides/see-rides.component.scss
+++ b/src/app/pages/see-rides/see-rides.component.scss
@@ -4,15 +4,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("../../../assets/img/fond-rides.svg");
+    background-image: url("../../../assets/img/fond-rides-02.svg");
     background-repeat: no-repeat;
-    background-size: contain;
-    background-position: 0 -20px;
-    height: 100%;
+    background-size: cover;
+    background-position: 0 -40px;
+    height: calc(100vh - 60px);
     
     form {
-        margin-top: 5em;
-        background-color: rgba(152, 193, 217, 0.9);
+        margin-top: 3em;
+        background-color: rgba(3, 133, 145, 0.95);
         padding: 2em 2em;
         border-radius: 3em;
         display: flex;
@@ -33,6 +33,7 @@
             label {
                 font-size: 1.3em;
                 margin-left: 0.5em;
+                color: white;
             }
     
             input[type="radio"] {
@@ -67,9 +68,122 @@
     }
 
     &__rides {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        height: 100%;
+        overflow: hidden;
+
+        &__box {
+            top: 0;
+            bottom:0;
+            height: 100%;
+            overflow-y:scroll;
+            overflow-x:hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            &__list {
+                color: $dark-color;
+                margin-top: -2.5em;
+                width :600px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-between;
+                background-image: url(../../../assets/img/card.svg);
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: bottom;
+                padding: 2em 0 4em 0;
+                border-radius: 50px 50px 0 0;
+
+                h3 {
+                    margin-bottom: 2em;
+                }
+
+                p {
+                    font-size: 1.3em;
+                }
+
+                .info {
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    justify-content: space-around;
+                    margin-bottom: 2em;
+
+                    &__ride {
+                        display: flex;
+                        justify-content: center;
+
+                        &__city {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: flex-start;
+                            justify-content: space-between;
+
+                            &__departure {
+                                margin-top: 0.2em;
+                            }
+                        }
+
+                        .point {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            justify-content: center;
+                            margin-right: 0.5em;
+
+                            &__departure {
+                                height: 30px;
+                                width: 30px;
+                                border-radius: 50%;
+                                background-color: $dark-color;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+
+                                &__inside {
+                                    height: 10px;
+                                    width: 10px;
+                                    border-radius: 50%;
+                                    background-color: white;
+                                }
+                            }
+
+                            &__line {
+                                width: 5px;
+                                height: 50px;
+                                background-color: $dark-color;
+                            }
+
+                            &__arrival {
+                                height: 20px;
+                                width: 20px;
+                                border-radius: 50%;
+                                background-color: white;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
+}
+
+.container__rides__box__list:first-child {
+    margin-top: 2em;
+}
+
+::-webkit-scrollbar-track {
+    border: none;
+    margin-top: 2em;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: $secondary-color;
+    border-radius: 10px;
 }
